--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "prettier": "prettier --write .",
+    "commit": "cz",
     "prepare": "husky install",
-    "commit": "cz"
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^1.0.2-beta.28",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -38,7 +39,8 @@
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "prettier": "^2.4.1",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vue-cli-plugin-element-plus": "~0.0.13"
   },
   "config": {
     "commitizen": {
